# 8080-Emulator-in-Rust

./: Cargo.toml  README.md  README.txt  dump.asm  emulator.h
.github/workflows/: rust.yml
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
chapter10/: Cargo.toml
chapter10/src/: main.rs
chapter13/: Cargo.toml
chapter13/src/: main.rs
chapter3/: Cargo.toml
chapter3/src/: main.rs
chapter4/: Cargo.toml
chapter4/src/: main.rs
chapter6/: Cargo.toml
chapter6/src/: main.rs
diagnosis_program/: cpudiag  cpudiag.asm
fearlessconcurrency/: Cargo.toml
fearlessconcurrency/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: guess.rs  main.rs
hello_cargo/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
invaders/: cpudiag
leetcode/: Cargo.toml
leetcode/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
oop/: Cargo.toml
oop/src/: lib.rs  main.rs
pancakes/: Cargo.toml
pancakes/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: lib.rs  main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
roms/: cpudiag  cpudiag.asm
smartptr/: Cargo.toml
smartptr/src/: main.rs
src/: clock_cycles.rs  condition_codes.rs  cpu.rs  errors.rs  lib.rs  main.rs
warp-plus/: Cargo.toml
warp-plus/src/: main.rs
webserver/: Cargo.toml  index.html
webserver/src/: lib.rs
