[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cpudiag"
test = false
doctest = false
required-features = ["bdos_mock"]

[features]
bdos_mock = []

[lib]
doctest = false
crate-type = ["lib", "staticlib"]

[dependencies]
