[package]
name = "i8080emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["emulator", "8080"]
description = "An Intel 8080 CPU full emulation library for 3rd party platform use"
documentation = "https://github.com/k0Iry/8080-Emulator-in-Rust"
readme = "README.md"
repository = "https://github.com/k0Iry/8080-Emulator-in-Rust"
homepage = "https://github.com/k0Iry/8080-Emulator-in-Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cpudiag"
test = false
doctest = false
required-features = ["bdos_mock"]

[features]
bdos_mock = []

[lib]
doctest = false
crate-type = ["lib", "staticlib"]

[dependencies]
